Fix a layout problem on phone

--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,15 @@ button {
     border-radius: 5px;
     display: block;
 }
+
+/* Makes widths and padding behave correctly on all elements */
+* {
+  box-sizing: border-box;
+}
+
+/* Prevent any horizontal scrolling on mobile */
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
